--- a/HTML portfolio1.html
+++ b/HTML portfolio1.html
@@ -488,7 +488,7 @@
                             <font size="5" color="#0066ff" face="arial">Codechef</font>
                           </a>
                           <br>
-                          <font size="4" color="#ffffff" face="arial">⭐</font>
+                          <font size="4" color="#ffffff" face="arial">⭐⭐</font>
 
                         </td>
                       </tr>
